test/libyul/yulSyntaxTests/invalid/push_disallowed.yul
{
    push0()
    push1()
    push2()
    push3()
    push4()
    push5()
    push6()
    push7()
    push8()
    push9()
    push10()
    push11()
    push12()
    push13()
    push14()
    push15()
    push16()
    push17()
    push18()
    push19()
    push20()
    push21()
    push22()
    push23()
    push24()
    push25()
    push26()
    push27()
    push28()
    push29()
    push30()
    push31()
    push32()
}
// ----
// DeclarationError 4619: (6-11): Function not found.
// DeclarationError 4619: (18-23): Function not found.
// DeclarationError 4619: (30-35): Function not found.
// DeclarationError 4619: (42-47): Function not found.
// DeclarationError 4619: (54-59): Function not found.
// DeclarationError 4619: (66-71): Function not found.
// DeclarationError 4619: (78-83): Function not found.
// DeclarationError 4619: (90-95): Function not found.
// DeclarationError 4619: (102-107): Function not found.
// DeclarationError 4619: (114-119): Function not found.
// DeclarationError 4619: (126-132): Function not found.
// DeclarationError 4619: (139-145): Function not found.
// DeclarationError 4619: (152-158): Function not found.
// DeclarationError 4619: (165-171): Function not found.
// DeclarationError 4619: (178-184): Function not found.
// DeclarationError 4619: (191-197): Function not found.
// DeclarationError 4619: (204-210): Function not found.
// DeclarationError 4619: (217-223): Function not found.
// DeclarationError 4619: (230-236): Function not found.
// DeclarationError 4619: (243-249): Function not found.
// DeclarationError 4619: (256-262): Function not found.
// DeclarationError 4619: (269-275): Function not found.
// DeclarationError 4619: (282-288): Function not found.
// DeclarationError 4619: (295-301): Function not found.
// DeclarationError 4619: (308-314): Function not found.
// DeclarationError 4619: (321-327): Function not found.
// DeclarationError 4619: (334-340): Function not found.
// DeclarationError 4619: (347-353): Function not found.
// DeclarationError 4619: (360-366): Function not found.
// DeclarationError 4619: (373-379): Function not found.
// DeclarationError 4619: (386-392): Function not found.
// DeclarationError 4619: (399-405): Function not found.
// DeclarationError 4619: (412-418): Function not found.
